stylesheets/style.css
html * {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

html, body { background-color: #fff;   font-family: "Merriweather",serif; font-weight: 300; color: #fff; font-size: 20px;}
input::-moz-focus-inner { border: 0; }
strong { font-weight: bold; }

h1 {font-size: 18px; font-weight: 300; color: #333333;font-family: 'Roboto', sans-serif; }
h2 {  font-size: 46px;
    font-style: italic;
    font-weight: 300;
    line-height: 65px;
    margin: 0 auto;
    padding-bottom: 40px;
    padding-top: 40px;
    text-align: center;}
h3 {font-size: 20px;line-height: 37px;  font-weight: 300; margin: 0 auto; text-align: center}
h4 {    font-size: 18px;
    color: #000;line-height: 28px;
    font-family: 'Roboto', sans-serif;
    text-align: center;    margin-bottom: 40px;}
p {line-height: 31px;}

h1 a {text-decoration: none; color: #333}
h1 a:hover {color: #aaa}

a {  -webkit-transition: ease-out .2s;
    -moz-transition: ease-out .2s;
    -o-transition: ease-out .2s;
    transition: ease-out .2s;
    text-align: center; color: #b2b2b2;
    font-size: 14px;text-transform: uppercase;font-family: 'Roboto', sans-serif; text-decoration: none;
}

/*#wrapper { padding: 0em 2.5em 0em}*/

.header {border-bottom: 1px solid #EFEFEF  }
.header-inside {margin: 0 auto; max-width: 1440px  }
.header h1 {float: left;
    padding: 18px 20px;
    font-weight: 300;
    text-transform: uppercase;
    font-size: 16px;
    letter-spacing: 1px; }
.navigation {float: right; color: #333;font-size: 18px;}
.navigation a {text-decoration: none;   text-align: left; }
.mobile-nav {display: none}
.mobile-nav-dropdown {display: none}

ul {
    text-align: left;
    display: inline;
    margin: 0;
    list-style: none;
    font-family: 'Roboto', sans-serif;
}
ul li {
    display: inline-block;
    position: relative;
    padding: 18px 20px;
    background: #fff;
    cursor: pointer;
    font-size: 14px;
    text-transform: uppercase;


}


ul li:hover {color: #aaa;}

ul a {color: #333}
ul a:hover {}
ul li ul {
    padding: 0;
    position: absolute;
    left: 0;
    width: 200px;
    box-shadow: none;
    display: none;
    opacity: 0;
    visibility: hidden

}
ul li ul li {
    background: #FBFBFB;
    display: block;
    color: #333;
    top: 18px;
    padding: 20px 0 18px 25px;
    line-height:20px;
}
ul li ul li:hover {background-color: #E9E9E9}

ul li:hover ul {
    display: block;
    opacity: 1;
    visibility: visible;
}

.centered {text-align: center !important; width: 100% !important;}
.main-section {padding-top: 120px;}
.main-section2 {padding-top: 120px; padding-bottom: 120px}
.main-section2 h3 {margin-bottom: 0!important}
.logo {margin-bottom: 40px;}
/*.cta {-webkit-border-radius: 300px;-moz-border-radius: 300px;border-radius: 300px; border: 1px solid #fff; margin: 0 auto; padding: 15px 30px;
text-align: center;display: block; margin: 0 auto}*/
.cta {text-align: center; display: block;opacity: 0.7;}
.main-section a {color: #fff;  max-width: 200px;margin: 0 auto; font-weight: 300;   text-decoration: none; text-align: center; text-transform: uppercase;
    font-size: 14px;font-family: 'Roboto', sans-serif;letter-spacing: 2px;-webkit-border-radius: 300px;-moz-border-radius: 300px;border-radius: 300px; padding: 18px 6px 18px 6px;
    border: 1px solid #E6E6E6;   -moz-box-shadow: 0px; -webkit-box-shadow: 0px;box-shadow:0px; opacity: 1 }
.main-section a:hover {background-color: #E6E6E6; color: #000 }
.logo { display:block;margin:auto;}
.main-content {max-width:1440px; margin:0 auto;}

.yelp {background-color: #FFF}
.yelp h2 {max-width: 600px; color: #000 }
.yelp h3 {max-width: 1200px; margin-bottom: 50px; color: #000}
.main-section2 h3 {max-width: 910px !important}
.yelp-project {padding-top: 60px;padding-bottom: 140px; }
.yelp-project  img {    display: block;margin: 0 auto;width: 80%; }
.yelp a {color: #000}

.first-dibs {background-color:#21242B}
.first-dibs h2 {max-width: 820px; }
.first-dibs h3 {max-width: 740px; margin-bottom: 50px}
.first-dibs-project {padding-top: 60px;padding-bottom: 140px;}
.first-dibs-project img {  display: block;margin: 0 auto;width: 80%;}

.pack {background-color:#21B179}
.pack h2 {max-width: 960px; }
.pack h3 {max-width: 980px; margin-bottom: 50px}
.pack-project {padding-top: 60px;padding-bottom: 140px;}
.pack-project img { display: block;margin: 0 auto;width: 80%; margin-top: 40px}
.packlink {color: #000; opacity: .7; display: block; margin-bottom: 100px; font-size: 16px}
.packlink:hover {opacity: 1}

.designs {background-color:#74a1d5}
.designs h2 {max-width: 750px; color: #fff }
.designs h3 {max-width: 920px; margin-bottom: 50px; color: #fff}
.designs-project {padding-top: 60px;padding-bottom: 140px; margin-left: 3%; margin-right: 3%;}
.designs-project img {    float: left;    width: 31.3%;}
.center-design {margin-left: 3%; margin-right: 3%}
.designs a {color: #fff}

.extra {background-color:#3982C3}
.extra h2 {max-width: 720px;padding-top: 0; padding-bottom: 0 }
.extra h3 {max-width: 920px; margin-bottom: 50px}
.extra-project {padding-top: 60px;padding-bottom: 120px;}
.extra-project img {    display: block;margin: 0 auto;width: 50%;}

.projectsheader {width: 100%;  padding-bottom: 80px;padding-top: 80px;}
#projects {max-width:1440px; margin:0 auto}
.large-project {    display: block;width: 100%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.small-project {    display: block;width: 50%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.mini-project {display: block;width: 25%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.medium-project {    display: block;width: 70%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.project-section { margin: 70px auto; max-width: 1400px;}
.project-section-gray {background-color: #a8a8a8; padding-bottom: 60px; padding-top: 60px;}
.project-section h3 { font-size: 16px;
    color: #000;
    font-family: 'Roboto', sans-serif;
    text-align: centerr;
    text-transform: uppercase;
    letter-spacing: 2px;}
.project-section p {font-size: 16px;
    color: #000;
    float: right;
    width: 80%;
    line-height: 34px;}
.project-title {margin-bottom: 40px}
.project-section img {margin-bottom: 80px}


.project-section-gray h3 { color: #fff;
    font-size: 16px;
    margin-top: 30px;
    text-align: center;}

.middle-project {margin-top: 60px}
/*#projects-dibs {padding-top: 60px; padding-bottom: 60px}
#projects-dibs img {   display: block;margin-bottom: 60px;margin-left: auto;margin-right: auto;width: 70%;}
.project_section3 img {width: 50% !important}
 .project_section3 { padding: 60px 0; margin-bottom:60px}*/
.footer {padding-top: 20px; padding-bottom: 20px;border-top: 1px solid #e0e0e0;}
.footer p {text-align: center; color: #b2b2b2;
    font-size: 14px;text-transform: uppercase;font-family: 'Roboto', sans-serif;letter-spacing: 2px;
}

.traingle {font-size: 14px;
    padding-left: 5px;
    position: relative;
    opacity: 0.4;
    top: -1px;}

.project-section-pack {  margin-left: 60px;
    margin-right: 60px;
    padding-bottom: 60px;
    padding-top: 60px}

.project-section-pack p {color: #000; max-width: 910px}


#next-project {  margin-left: 60px;margin-right: 60px;padding-bottom: 140px; text-align: center;    font-family: 'Roboto', sans-serif;}
#next-project h4 { margin-bottom: 30px; text-align: center; font-size: 16px;text-transform: uppercase;}
#next-project a {text-decoration: none; color: #333; line-height: 55px;}
#next-project a:hover {color: #aaa}


.about {background-color: #fff;
    border-bottom: 1px solid #e4e4e4;
    padding-bottom: 100px;
    padding-top: 60px;
    position: absolute;
    width: 100%;display: none;}
.about p {width: 960px; margin: 0 auto;     color: #333333;
    font-size: 18px;
    font-weight: 300;}
.img1 {background-image: url("../images/img1.jpg");float: left;width: 450px; margin-right: 20px}
.img2 {background-image: url("../images/img2.jpg");float: left;width: 450px;}
.img3 {background-image: url("../images/img3.jpg");float: left;width: 400px;margin-right: 100px}
.img4 {background-image: url("../images/img4.jpg");float: left;width: 400px;}
.the-images {background-position: center center;background-repeat: no-repeat;background-size: cover;height: 350px;}
.photos-about {width: 960px; margin: 60px auto 0;}
.active2 {color: #aaa !important;}
.border {}
.spacing-bottom {margin-bottom: 140px}

.multi-project {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
    max-width: 1400px;
}

.multi-project img {
    float: left;
    margin-left: 10px;
    margin-right: 10px;
    width: 45%;
}

@media (max-width: 1400px) {

    .large-project {width: 90%}

    .project-section h3 {
        float: none;
        width: 80%;
        text-align: left;
        margin-bottom: 20px;
    }

    .project-section p {
        float: none;
        width: 80%;
        line-height: 34px;
        text-align: left;
        margin: 0 auto;
    }

}

@media (max-width: 1000px) {

    .navigation ul {display: none}
    .navigation {margin-right: 20px; margin-top: 17px}
    .header {width: 100%;}
    .header h1 {margin-left: 20px}
    .mobile-nav {display: block}
    body {font-size: 16px}
    h2 {font-size: 30px; line-height: 45px; padding-top: 20px; padding-bottom: 20px}
    h3 {font-size: 16px; line-height: 28px}
    .main-section {padding-left: 20px; padding-right: 20px; padding-top: 60px}
    .yelp-project {padding-bottom: 60px}
    .yelp-project img {width: 95%}
    .yelp h3 {margin-bottom: 20px}
    .first-dibs-project img {width: 100%}
    .pack-project img {width: 95%}

    .animations h3 {margin-bottom: 20px}
    .animations-project {padding-bottom: 60px;padding-top: 30px;margin-left: 0;
        margin-right: 0;}
    .animations-project img {width: 33.3%;}
    .center-animation {margin-left: 0; margin-right: 0}
    .pack-project {    padding-bottom: 60px;}
    .first-dibs-project { padding-bottom: 60px;}

    .mobile-nav-dropdown {width: 100%; background-color: #fff;  border-top: 1px solid #e4e4e4;     position: absolute; }
    .mobile-nav-dropdown a {   float: left;width: 100%; margin-left: 20px; padding-bottom: 25px; text-decoration: none; color: #aaa}
    .mobile-nav-dropdown span {    margin-top: 25px; float: left;width: 100%; margin-left: 20px; padding-bottom: 25px; text-decoration: none; color: #333; font-weight: 500}

    .large-project {width: 90%}

}

@media only screen and (min-width:1000px) {
    .mobile-nav-dropdown {
        display: none !important
    }
}

